c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@inline_external_definition.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/inline_external_definition.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#[no_mangle]
#[inline]
pub unsafe extern "C" fn answer() -> ::core::ffi::c_int {
    return 42 as ::core::ffi::c_int;
}
