c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@lift_const.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/lift_const.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
extern "C" {
    fn printf(format: *const u8, ...) -> ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn lift_const(mut argc: ::core::ffi::c_int, mut argv: *mut *mut u8) {
    let mut starts_with_a: ::core::ffi::c_int = 0;
    if argc != 3 as ::core::ffi::c_int {
        starts_with_a = (**argv.offset(0 as isize) as ::core::ffi::c_int
            == 'a' as ::core::ffi::c_int) as ::core::ffi::c_int;
        if starts_with_a != 0 {
            println!("  (arg 0 starts with 'a')");
        }
    }
    if argc == 3 as ::core::ffi::c_int {
        println!("  (argc was 3)");
    }
}
